2007-04-10  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Try harder to handle min and max vals
	that are close but not exactly equal.

2007-04-09  Daniel J. Sebald  <daniel.sebald@ieee.org>

	* plot/stem.m: Add back the baseline line and let it be not adjustable
	in response to a change in x limits for now.

2007-04-09  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (__gnuplot_write_data__): New function.
	(__go_draw_axes__): Use it to write data to plot stream.

2007-04-09  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/stem.m: Fix typos in doc string.  Fix typo in call to
	zeros.  Set markerfacecolor property in call to plot.

2007-04-06  John W. Eaton  <jwe@octave.org>

	* linear-algebra/norm.m: Use new __vnorm__ function for vector args.

2007-04-06  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/stem.m: Use plot instead of a series of calls to line.

2007-04-05  John W. Eaton  <jwe@octave.org>

	* sparse/nonzeros.m, sparse/normest.m, sparse/spconvert.m,
	sparse/spdiags.m, sparse/speye.m, sparse/spfun.m, sparse/spones.m,
	sparse/sprand.m, sparse/sprandn.m, sparse/sprandsym.m,
	sparse/spstats.m, sparse/treeplot.m: Style fixes.

	* pkg/pkg.m: Use "strcat (...)" instead of "[...]".
	Use strcmpi instead of strcmp+tolower.
	Style fixes.

	* testfun/speed.m: Use "strcat (...)" instead of "[...]".
	Plotting fixes.  Style fixes.

	* testfun/test.m: Use "strcat (...)" instead of "[...]".
	Style fixes.

	* testfun/fail.m: No need to check for evalin and lastwarn.
	Style fixes.

	* testfun/demo.m, testfun/example.m: Style fixes.
	Use "strcat (...)" instead of "[...]".
	Use format specifiers in calls to warning.

	* testfun/assert.m: Use "numel (x)" instead of "prod (size (x))".
	Use "strcat (...)" instead of "[...]".
	Use "x(end)" instead of "x(length (x))".
	Check NA before NaN.
	Style fixes.

2007-03-29  John W. Eaton  <jwe@octave.org>

	* plot/stem.m (stem, set_default_values): Use RGB triple for color.
